tests/script/negative/typecheck/shadow-argument-function.s
transition initial -> terminal;

@initial
init() {
  terminate();
}


foo(int a) {
  a = a + 1;
}
